--- a/student1/views/student.xml
+++ b/student1/views/student.xml
@@ -24,7 +24,7 @@
                                     <group>
                                             <field name="name"/>
                                             <field name="age"/>
-                                            <field name="class_"/>
+                                            <field name="class_1"/>
                                     </group>
                                 </div>
                         </sheet>
