--- a/student1/views/student.xml
+++ b/student1/views/student.xml
@@ -3,31 +3,36 @@
         <record id="student_action" model="ir.actions.act_window">
             <field name="name">student.action</field>
             <field name="res_model">student.student</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,kanban</field>
         </record>
 
         <record id="student_form" model="ir.ui.view">
             <field name="name">student.form</field>
             <field name="model">student.student</field>
             <field name="arch" type="xml">
-                    <form string="">
-                        <header>
-                            <button name="waiting" type="object" string="Waiting list" class="btn-warning"/>
-                            <button name="admit" type="object" string="Admit" class="btn-success"/>
-                            <field name="status" widget="statusbar" statusbar_visible="Waiting list,Admitted"/>
-                        </header>
-                        <sheet>
-                        <widget name="web_ribbon" title="Waiting list" bg_color="bg-warning" attrs="{'invisible':[('status','!=','Waiting list')]}"/>   
-                        <widget name="web_ribbon" title="Admitted" bg_color="bg-success" attrs="{'invisible':[('status','!=','Admitted')]}"/>   
+                <form string="">
+                    <header>
+                        <button name="waiting" type="object" string="Waiting list"
+                            class="btn-warning" />
+                        <button name="admit" type="object" string="Admit" class="btn-success" />
+                        <field name="status" widget="statusbar"
+                            statusbar_visible="Waiting list,Admitted" />
+                    </header>
+                    <sheet>
+                        <widget name="web_ribbon" title="Waiting list" bg_color="bg-warning"
+                            attrs="{'invisible':[('status','!=','Waiting list')]}" />
+                        <widget name="web_ribbon" title="Admitted" bg_color="bg-success"
+                            attrs="{'invisible':[('status','!=','Admitted')]}" />
                         <h1 style="text-align:center;">Student Details</h1>
-                                <div style="box-shadow:0 0 9px 3px grey;width:50%;margin:0 auto;padding:20px 20px;margin-top:60px;color:white;background-color:black;font-weight:bold;">
-                                    <group>
-                                            <field name="name"/>
-                                            <field name="age"/>
-                                            <field name="class_"/>
-                                    </group>
-                                </div>
-                        </sheet>
+                        <div
+                            style="box-shadow:0 0 9px 3px grey;width:50%;margin:0 auto;padding:20px 20px;margin-top:60px;font-weight:bold;">
+                            <group>
+                                <field name="name" />
+                                <field name="age" />
+                                <field name="class_" />
+                            </group>
+                        </div>
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -37,23 +42,65 @@
             <field name="model">student.student</field>
             <field name="arch" type="xml">
                 <tree string="">
-                    <field name="name"/>
-                    <field name="age"/>
-                    <field name="class_"/>
+                    <field name="name" />
+                    <field name="age" />
+                    <field name="class_" />
                 </tree>
+            </field>
+        </record>
+
+        <record id="student_kanban" model="ir.ui.view">
+            <field name="name">student.kanban</field>
+            <field name="model">student.student</field>
+            <field name="arch" type="xml">
+                <kanban string="">
+                    <field name="name" />
+                    <field name="age" />
+                    <field name="class_" />
+
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_global_click"
+                                style="box-shadow:0 0 9px 3px grey;padding:30px 30px;width:500px;font-family:sanserif;margin-top:50px;margin-left:50px;">
+
+                                <div class="oe_kanban_details" style="font-size:25px">
+                                    <div style="box-shadow:0 0 9px 3px grey;margin-bottom:50px;border-radius:5px;text-align:center;background:linear-gradient(to right,white,cyan,white)">
+                                        <strong class="o_kanban_record_title"
+                                            style="font-size:25px;font-weight:bold;font-family:sanserif">
+                                            <field name="name" />
+                                        </strong>
+                                    </div> 
+                                    <div style="box-shadow:0 0 9px 3px grey;padding:10px 10px;font-weight:bold;font-size:20px;background:linear-gradient(to right,white,cyan,white);color:black;">
+                                        <div style="display:flex;margin-left:20px;">
+                                            <div t-if="record.age.value">
+                                                <t t-esc="record.age.value" />
+                                            </div>
+                                        </div>
+                                        <div style="display:flex;margin-left:20px;">
+                                            <div t-if="record.class_.value">
+                                                <t t-esc="record.class_.value" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
             </field>
         </record>
 
         <menuitem
             id="student_main_menu"
             name="Student"
-            sequence="1"/>
+            sequence="1" />
 
         <menuitem
             id="student_menu"
             name="Student"
             action="student_action"
             parent="student_main_menu"
-            sequence="1"/>    
+            sequence="1" />
     </data>
 </odoo>
