--- a/student1/views/student.xml
+++ b/student1/views/student.xml
@@ -59,12 +59,15 @@
                     <field name="name"/>
                     <field name="age" />
                     <field name="class_" />
+                    <field name="id" />
 
                     <templates>
                         <t t-name="kanban-box">
                             <div t-attf-class="oe_kanban_global_click"
                                 style="box-shadow:0 0 9px 3px grey;padding:30px 30px;width:500px;font-family:sanserif;margin-top:50px;margin-left:50px;">
-
+                                <div style="margin-left:18px;margin-bottom:30px">
+                                    <img type="open" t-att-src="kanban_image('student.student', 'image', record.id.raw_value)" alt="name" style="box-shadow:0 0 9px 3px grey; width:450px;height:350px"/>
+                                    </div>
                                 <div class="oe_kanban_details" style="font-size:25px">
                                     <div style="box-shadow:0 0 9px 3px grey;margin-bottom:50px;border-radius:5px;text-align:center;background:linear-gradient(to right,white,black,white);color:white;text-shadow:0 0 9px black">
                                         <strong class="o_kanban_record_title"
