--- a/student1/views/student.xml
+++ b/student1/views/student.xml
@@ -29,8 +29,10 @@
                             <group>
                                 <field name="image" widget="image"/>
                                 <field name="name" attrs="{'required':True}"/>
-                                <field name="age" attrs="{'required':True}"/>
+                                <field name="dob" attrs="{'required':True}"/>
                                 <field name="class_" attrs="{'required':True}"/>
+                                <field name="age" />
+                                <field name="birthday_message" />
                             </group>
                         </div>
                     </sheet>
@@ -44,9 +46,11 @@
             <field name="arch" type="xml">
                 <tree string="">
                     <field name="name" />
-                    <field name="age" />
+                    <field name="dob" />
                     <field name="class_" />
                     <field name="image" />
+                    <field name="age" />
+                    <field name="birthday_message" />
                 </tree>
             </field>
         </record>
@@ -57,7 +61,8 @@
             <field name="arch" type="xml">
                 <kanban string="">
                     <field name="name"/>
-                    <field name="age" />
+                    <field name="image"/>
+                    <field name="dob" />
                     <field name="class_" />
                     <field name="id" />
 
@@ -69,16 +74,16 @@
                                     <img type="open" t-att-src="kanban_image('student.student', 'image', record.id.raw_value)" alt="name" style="box-shadow:0 0 9px 3px grey; width:450px;height:350px"/>
                                     </div>
                                 <div class="oe_kanban_details" style="font-size:25px">
-                                    <div style="box-shadow:0 0 9px 3px grey;margin-bottom:50px;border-radius:5px;text-align:center;background:linear-gradient(to right,white,black,white);color:white;text-shadow:0 0 9px black">
+                                    <div style="box-shadow:0 0 9px 3px grey;margin-bottom:50px;border-radius:5px;text-align:center;background:linear-gradient(to right,white,blue,white);color:white;">
                                         <strong class="o_kanban_record_title"
                                             style="font-size:25px;font-weight:bold;font-family:sanserif">
                                             <field name="name" />
                                         </strong>
                                     </div> 
-                                    <div style="box-shadow:0 0 9px 3px grey;padding:10px 10px;font-size:20px;color:black;text-shadow:2px 2px grey ;">
+                                    <div style="box-shadow:0 0 9px 3px grey;padding:10px 10px;font-size:20px;color:black;font-weight:bold">
                                         <div style="display:flex;margin-left:20px;">
-                                            <div t-if="record.age.value">
-                                                <t t-esc="record.age.value" />
+                                            <div t-if="record.dob.value">
+                                                <t t-esc="record.dob.value" />
                                             </div>
                                         </div>
                                         <div style="display:flex;margin-left:20px;">
